# model-explorer

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui  test_main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-and-test.yml
